src/css/style.css
/* ... */
.verticalBlogs a {
  padding-block: 1rem;
}
.verticalBlogs a article {
  display: grid;
  grid-template-columns: 6rem auto;
  gap: 1rem;
}
@media (width <= 640px) {
  .verticalBlogs a article {
    grid-template-columns: 5rem auto;
    padding-right: 0.3rem;
  }
}
.verticalBlogs a article p, .verticalBlogs a article h3 {
  font-size: 1.2rem;
}
@media (width <= 1280px) {
  .verticalBlogs a article p, .verticalBlogs a article h3 {
    font-size: 1rem;
  }
}
.verticalBlogs a article p, .verticalBlogs a article span {
  color: var(--text-tertiary);
}
.verticalBlogs a article div {
  display: grid;
  gap: 0.4rem;
}
.verticalBlogs a article div h3 {
  color: var(--text-primary);
  font-weight: 500;
}
@media (width <= 640px) {
  .verticalBlogs a article div h3 {
    line-height: 1.66rem;
  }
}
.verticalBlogs a article div span {
  font-size: 0.875rem;
}
.verticalBlogs a svg {
  width: 0.87rem;
  height: 0.87rem;
  opacity: 0;
  transition: all 0.1s ease-in;
}
@media (width <= 640px) {
  .verticalBlogs a svg {
    display: none;
  }
}
.verticalBlogs a:hover {
  border-bottom-color: var(--text-primary);
}
.verticalBlogs a:hover svg {
  opacity: 1;
}
.verticalBlogs a:last-child:hover {
  border-bottom: 1px solid white;
}

.contact__left {
  position: sticky;
  top: 7%;
}
@media (width <= 1280px) {
  .contact__left {
    top: 20%;
  }
}
@media (width <= 884px) {
  .contact__left {
    top: 5%;
  }
}
@media (width <= 640px) {
  .contact__left {
    position: relative;
  }
}
.contact__content {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 8rem;
  align-items: start;
}
@media (width <= 884px) {
  .contact__content {
    gap: 4rem;
  }
}
@media (width <= 640px) {
  .contact__content {
    grid-template-columns: none;
    gap: 6rem;
  }
}
.contact__subtitle {
  font-family: "Antonio", sans-serif;
  font-weight: 600;
  font-size: 1.3rem;
  text-transform: uppercase;
}
@media (width <= 640px) {
  .contact__subtitle {
    font-size: 1.2rem;
  }
}
@media (width <= 400px) {
  .contact__subtitle {
    font-size: 1.1rem;
  }
}
.contact__title {
  margin-top: 20px;
  font-size: 3.5rem;
  line-height: 1.2;
  font-weight: 700;
}
@media (width <= 1280px) {
  .contact__title {
    font-size: 2.8rem;
  }
}
@media (width <= 640px) {
  .contact__title {
    margin-top: 0.7rem;
    font-size: 2.2rem;
  }
}
@media (width <= 400px) {
  .contact__title {
    font-size: 2rem;
  }
}
.contact__title i {
  font-family: "Playfair Display", sans-serif;
  font-style: italic;
  font-weight: 500;
}
.contact__description {
  margin-top: 1.2rem;
}
@media (width <= 1280px) {
  .contact__description {
    margin-top: 1rem;
  }
}
.contact__description, .contact__email {
  max-width: 480px;
  color: var(--text-secondary);
  font-size: 1.2rem;
  line-height: 1.7;
}
@media (width <= 1280px) {
  .contact__description, .contact__email {
    font-size: 1rem;
  }
}
.contact__email {
  margin-top: 6rem;
}
@media (width <= 1280px) {
  .contact__email {
    margin-top: 7rem;
  }
}
@media (width <= 640px) {
  .contact__email {
    margin-top: 1rem;
  }
}
.contact a {
  font-size: 1.2rem;
}
@media (width <= 1280px) {
  .contact a {
    font-size: 1rem;
  }
}
.contact a:hover {
  text-decoration: underline;
}

.contact-form section {
  display: grid;
  gap: 3rem;
}
.contact-form__label {
  margin-bottom: 12px;
  display: flex;
  align-items: center;
  gap: 8px;
  font-size: 14px;
  color: var(--text-label);
}

.submit-btn {
  background-color: transparent;
  margin-top: 2rem;
  padding-block: 1.25rem;
  width: 100%;
  border-radius: 999rem;
  background-color: var(--button-primary-bg);
  color: var(--button-primary-text);
  border: 1px solid transparent;
  font-weight: 400;
}
.submit-btn:disabled {
  cursor: not-allowed;
  background-color: var(--button-primary-disabled-bg);
  color: var(--button-primary-disabled-text);
}
.submit-btn:hover {
  background-color: var(--button-primary-bg-hovered);
  border: 1px solid var(--button-primary-text);
}
.submit-icon {
  width: 0.8rem;
  height: 0.8rem;
}

.teste {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

.description--medium {
  font-size: 1.1rem;
  color: var(--text-secondary);
}
@media (width <= 1280px) {
  .description--medium {
    font-size: 1rem;
  }
}
.description--normal {
  font-size: 1.2rem;
  color: var(--text-secondary);
}
@media (width <= 1280px) {
  .description--normal {
    font-size: 1rem;
  }
}

.footer {
  margin-top: 20rem;
  padding-bottom: 1.5rem;
}
@media (width <= 1280px) {
  .footer {
    margin-top: 15rem;
  }
}
@media (width <= 884px) {
  .footer {
    margin-top: 12rem;
  }
}
@media (width <= 640px) {
  .footer {
    margin-top: 10rem;
    display: grid;
    justify-content: center;
  }
}
.footer__gratitude {
  font-size: 1.3rem;
  font-style: italic;
  font-family: "Playfair Display", sans-serif;
}

.homeHeader {
  margin-bottom: 25rem;
  display: grid;
  gap: 13rem;
}
@media (width <= 1280px) {
  .homeHeader {
    gap: 4rem;
  }
}
@media (width <= 640px) {
  .homeHeader {
    margin-bottom: 18rem;
    gap: 12.4rem;
  }
}
@media (width <= 400px) {
  .homeHeader {
    margin-bottom: 15rem;
    gap: 10.4rem;
  }
}
.homeHeader__heroContent {
  display: flex;
  justify-content: center;
  gap: 40rem;
  position: relative;
}
@media (width <= 1280px) {
  .homeHeader__heroContent {
    gap: 27.4rem;
  }
}
@media (width <= 884px) {
  .homeHeader__heroContent {
    gap: 17.5rem;
  }
}
@media (width <= 640px) {
  .homeHeader__heroContent {
    gap: 1rem;
  }
}
.homeHeader__heroContent h1 {
  font-family: "Playfair Display", sans-serif;
  font-size: 6.4rem;
  font-style: italic;
  font-weight: 500;
}
@media (width <= 1280px) {
  .homeHeader__heroContent h1 {
    font-size: 5rem;
  }
}
@media (width <= 640px) {
  .homeHeader__heroContent h1 {
    font-size: 3.2rem;
    line-height: 2.5rem;
  }
}
.homeHeader__heroContent img {
  position: absolute;
  top: -20%;
}
@media (width <= 1280px) {
  .homeHeader__heroContent img {
    top: -51%;
    width: 35%;
  }
}
/* ... */

